<resources>
    <string name="app_name">hpv</string>
    <string name="dist">DISTANCE</string>
    <string name="cadence">CADENCE</string>
    <string name="kmph">KMPH</string>
    <string name="numb_default">000</string>
    <string name="numb_default2">00</string>
    <string name="ctDesc">Content Description</string>
    <string name="connection">Connection</string>
    <string name="ftTire">Front Tire</string>
    <string name="rTire">Rear Tire</string>
    <string name="headlight">Headlight</string>
    <string name="ldgear">Landing Gear</string>
</resources>
